# zil

./: .gitignore  Cargo.toml  README.md  grammars.toml  orphan.sh  zed-readme.md
assets/grammars/: bash.wasm  c.wasm  cpp.wasm  diff.wasm  git_commit.wasm  glsl.wasm  go.wasm  gomod.wasm  gowork.wasm  html.wasm  jsdoc.wasm  markdown.wasm  markdown_inline.wasm  proto.wasm  python.wasm  regex.wasm  rust.wasm  tsx.wasm  typescript.wasm  yaml.wasm
assets/keymaps/: default-macos.json  initial.json
assets/languages/bash/: config.toml
assets/languages/c/: config.toml
assets/languages/cpp/: config.toml
assets/languages/css/: config.toml
assets/languages/diff/: config.toml
assets/languages/git_commit/: config.toml
assets/languages/glsl/: config.toml
assets/languages/go/: config.toml
assets/languages/gomod/: config.toml
assets/languages/gowork/: config.toml
assets/languages/html/: config.toml
assets/languages/javascript/: config.toml
assets/languages/json/: config.toml
assets/languages/jsonc/: config.toml
assets/languages/markdown/: config.toml
assets/languages/markdown_inline/: config.toml
assets/languages/proto/: config.toml
assets/languages/python/: config.toml
assets/languages/tsx/: config.toml
assets/languages/typescript/: config.toml
assets/languages/yaml/: config.toml
assets/settings/: default.json
crates/acp_tools/: Cargo.toml
crates/acp_tools/src/: acp_tools.rs
crates/agent/: Cargo.toml
crates/agent/src/: tools.rs
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: agent_panel.rs  agent_ui.rs  inline_assistant.rs
crates/assets/src/: assets.rs
crates/breadcrumbs/src/: breadcrumbs.rs
crates/buffer_diff/: Cargo.toml
crates/buffer_diff/src/: buffer_diff.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  telemetry.rs  user.rs
crates/cloud_api_types/: Cargo.toml
crates/cloud_api_types/src/: cloud_api_types.rs
crates/cloud_llm_client/: Cargo.toml
crates/command_palette/: Cargo.toml
crates/command_palette/src/: command_palette.rs
crates/copilot/src/: copilot.rs
crates/dap/: Cargo.toml
crates/dap-types/: Cargo.toml
crates/dap-types/src/: events.rs  lib.rs  messages.rs  requests.rs  types.rs
crates/dap/src/: adapters.rs  dap.rs  debugger_settings.rs  registry.rs
crates/dap_adapters/: Cargo.toml
crates/dap_adapters/src/: dap_adapters.rs
crates/debug_adapter_extension/src/: debug_adapter_extension.rs
crates/debugger_tools/src/: dap_log.rs
crates/edit_prediction/: Cargo.toml
crates/edit_prediction/src/: edit_prediction.rs  onboarding_modal.rs
crates/edit_prediction_ui/: Cargo.toml
crates/edit_prediction_ui/src/: edit_prediction_button.rs
crates/editor/: Cargo.toml
crates/editor/src/: actions.rs  clipboard.rs  code_actions.rs  code_completion_tests.rs  code_context_menus.rs  completions.rs  config.rs  diagnostics.rs  display_map.rs  document_colors.rs  edit_prediction.rs  editor.rs  editor_settings.rs  editor_tests.rs  element.rs  fold.rs  highlight_matching_bracket.rs  hover_links.rs  hover_popover.rs  indent_guides.rs  inlays.rs  input.rs  items.rs  jsx_tag_auto_close.rs  lsp_ext.rs  mouse_context_menu.rs  movement.rs  navigation.rs  rewrap.rs  runnables.rs  scroll.rs  selection.rs  selections_collection.rs  semantic_tokens.rs  signature_help.rs  split.rs  tasks.rs  test.rs
crates/encoding_selector/: Cargo.toml
crates/encoding_selector/src/: encoding_selector.rs
crates/eval_cli/: Cargo.toml
crates/eval_cli/src/: headless.rs
crates/extension_host/: Cargo.toml
crates/extensions_ui/: Cargo.toml
crates/file_finder/: Cargo.toml
crates/fs/: Cargo.toml
crates/git/: Cargo.toml
crates/go_to_line/: Cargo.toml
crates/grammars/: Cargo.toml
crates/image_viewer/: Cargo.toml
crates/inspector_ui/: Cargo.toml
crates/json_schema_store/: Cargo.toml
crates/keymap_editor/: Cargo.toml
crates/language/: Cargo.toml
crates/language_models/: Cargo.toml
crates/language_selector/: Cargo.toml
crates/language_tools/: Cargo.toml
crates/languages/: Cargo.toml
crates/languages/src/: go.rs  lib.rs  rust.rs  vtsls.rs
crates/line_ending_selector/: Cargo.toml
crates/lsp-types/: Cargo.toml
crates/markdown/: Cargo.toml
crates/multi_buffer/: Cargo.toml
crates/notifications/: Cargo.toml
crates/open_path_prompt/: Cargo.toml
crates/platform_title_bar/: Cargo.toml
crates/project/: Cargo.toml
crates/project_panel/: Cargo.toml
crates/recent_projects/: Cargo.toml
crates/rope/: Cargo.toml
crates/rpc/: Cargo.toml
crates/search/: Cargo.toml
crates/session/: Cargo.toml
crates/settings/: Cargo.toml
crates/settings_ui/: Cargo.toml
crates/sum_tree/: Cargo.toml
crates/tab_switcher/: Cargo.toml
crates/task/: Cargo.toml
crates/terminal/: Cargo.toml
crates/theme/: Cargo.toml
crates/theme/src/: fallback_themes.rs  registry.rs  theme.rs
crates/title_bar/: Cargo.toml
crates/title_bar/src/: onboarding_banner.rs  title_bar.rs  title_bar_settings.rs  update_version.rs
crates/ui/: Cargo.toml
crates/ui_input/: Cargo.toml
crates/ui_macros/: Cargo.toml
crates/ui_prompt/: Cargo.toml
crates/vim/: Cargo.toml
crates/which_key/: Cargo.toml
crates/workspace/: Cargo.toml
crates/workspace/src/: dock.rs  history_manager.rs  invalid_item_view.rs  item.rs  multi_workspace.rs  notifications.rs  pane.rs  pane_group.rs  persistence.rs  searchable.rs  security_modal.rs  status_bar.rs  toolbar.rs  welcome.rs  workspace.rs  workspace_settings.rs
crates/workspace/src/persistence/: model.rs
crates/worktree/: Cargo.toml
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  reliability.rs  visual_test_runner.rs  zed.rs
crates/zed/src/reliability/hang_detection/: telemetry.rs
crates/zed/src/zed/: app_menus.rs  arg_listener.rs  edit_prediction_registry.rs  open_listener.rs  quick_action_bar.rs  visual_tests.rs
extensions/glsl/: extension.toml
extensions/html/: extension.toml
extensions/proto/: extension.toml
extensions/test-extension/: extension.toml
tooling/grammar-builder/: Cargo.toml
(+282 files in other folders)
