[workspace]
resolver = "2"
members = [
    "crates/askpass",
    "crates/assets",
    "crates/breadcrumbs",
    "crates/buffer_diff",
    "crates/cli",
    "crates/client",
    "crates/clock",
    "crates/cloud_api_client",
    "crates/cloud_api_types",
    "crates/cloud_llm_client",
    "crates/collections",
    "crates/command_palette",
    "crates/command_palette_hooks",
    "crates/component",
    "crates/credentials_provider",
    "crates/editor",
    "crates/encoding_selector",
    "crates/env_var",
    "crates/explorer_command_injector",
    "crates/fs",
    "crates/fuzzy",
    "crates/fuzzy_nucleo",
    "crates/git",
    "crates/git_hosting_providers",
    "crates/go_to_line",
    "crates/gpui",
    "crates/gpui_linux",
    "crates/gpui_macos",
    "crates/gpui_macros",
    "crates/gpui_platform",
    "crates/gpui_shared_string",
    "crates/gpui_tokio",
    "crates/gpui_util",
    "crates/gpui_web",
    "crates/gpui_wgpu",
    "crates/gpui_windows",
    "crates/http_client",
    "crates/http_client_tls",
    "crates/icons",
    "crates/image_viewer",
    "crates/inspector_ui",
    "crates/keymap_editor",
    "crates/language",
    "crates/language_core",
    "crates/language_model",
    "crates/language_model_core",
    "crates/language_selector",
    "crates/language_tools",
    "crates/languages",
    "crates/line_ending_selector",
    "crates/lsp",
    "crates/markdown",
    "crates/media",
    "crates/menu",
    "crates/mermaid_render",
    "crates/multi_buffer",
    "crates/net",
    "crates/notifications",
    "crates/open_path_prompt",
    "crates/paths",
    "crates/picker",
    "crates/platform_title_bar",
    "crates/project",
    "crates/proto",
    "crates/refineable",
    "crates/refineable/derive_refineable",
    "crates/release_channel",
    "crates/remote",
    "crates/reqwest_client",
    "crates/rope",
    "crates/rpc",
    "crates/scheduler",
    "crates/search",
    "crates/session",
    "crates/settings",
    "crates/settings_content",
    "crates/settings_json",
    "crates/settings_macros",
    "crates/settings_profile_selector",
    "crates/settings_ui",
    "crates/sum_tree",
    "crates/syntax_theme",
    "crates/tab_switcher",
    "crates/task",
    "crates/text",
    "crates/theme",
    "crates/theme_settings",
    "crates/title_bar",
    "crates/toolchain_selector",
    "crates/ui",
    "crates/ui_input",
    "crates/ui_macros",
    "crates/ui_prompt",
    "crates/util",
    "crates/util_macros",
    "crates/watch",
    "crates/which_key",
    "crates/windows_resources",
    "crates/workspace",
    "crates/worktree",
    "crates/zed",
    "crates/zed_actions",
    "crates/zed_credentials_provider",
    "crates/zed_env_vars",
    "crates/zlog",
    "crates/zlog_settings",
    "crates/ztracing",
    "crates/ztracing_macro",

    #
    # Tooling
    #

    "tooling/perf",
    "tooling/grammar-builder",
]
default-members = ["crates/zed"]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]

#
# Workspace member crates
#

askpass = { path = "crates/askpass" }
assets = { path = "crates/assets" }
breadcrumbs = { path = "crates/breadcrumbs" }
buffer_diff = { path = "crates/buffer_diff" }
cli = { path = "crates/cli" }
client = { path = "crates/client" }
clock = { path = "crates/clock" }
cloud_api_client = { path = "crates/cloud_api_client" }
cloud_api_types = { path = "crates/cloud_api_types" }
cloud_llm_client = { path = "crates/cloud_llm_client" }
collections = { path = "crates/collections", version = "0.1.0" }
command_palette = { path = "crates/command_palette" }
command_palette_hooks = { path = "crates/command_palette_hooks" }
component = { path = "crates/component" }
console = "0.16"
credentials_provider = { path = "crates/credentials_provider" }
crossbeam = "0.8.4"
derive_refineable = { path = "crates/refineable/derive_refineable" }
dialoguer = { version = "0.12", default-features = false }
editor = { path = "crates/editor" }
encoding_selector = { path = "crates/encoding_selector" }
env_var = { path = "crates/env_var" }
fs = { path = "crates/fs" }
fuzzy = { path = "crates/fuzzy" }
fuzzy_nucleo = { path = "crates/fuzzy_nucleo" }
git = { path = "crates/git" }
git_hosting_providers = { path = "crates/git_hosting_providers" }
go_to_line = { path = "crates/go_to_line" }
gpui = { path = "crates/gpui", default-features = false }
gpui_linux = { path = "crates/gpui_linux", default-features = false }
gpui_macos = { path = "crates/gpui_macos", default-features = false }
gpui_macros = { path = "crates/gpui_macros" }
gpui_platform = { path = "crates/gpui_platform", default-features = false }
gpui_shared_string = { path = "crates/gpui_shared_string" }
gpui_tokio = { path = "crates/gpui_tokio" }
gpui_util = { path = "crates/gpui_util" }
gpui_web = { path = "crates/gpui_web" }
gpui_wgpu = { path = "crates/gpui_wgpu" }
gpui_windows = { path = "crates/gpui_windows", default-features = false }
http_client = { path = "crates/http_client" }
http_client_tls = { path = "crates/http_client_tls" }
icons = { path = "crates/icons" }
image_viewer = { path = "crates/image_viewer" }
inspector_ui = { path = "crates/inspector_ui" }
keymap_editor = { path = "crates/keymap_editor" }
language = { path = "crates/language" }
language_core = { path = "crates/language_core" }
language_model = { path = "crates/language_model" }
language_model_core = { path = "crates/language_model_core" }
language_selector = { path = "crates/language_selector" }
language_tools = { path = "crates/language_tools" }
languages = { path = "crates/languages" }
line_ending_selector = { path = "crates/line_ending_selector" }
lsp = { path = "crates/lsp" }
markdown = { path = "crates/markdown" }
media = { path = "crates/media" }
menu = { path = "crates/menu" }
mermaid_render = { path = "crates/mermaid_render" }
multi_buffer = { path = "crates/multi_buffer" }
net = { path = "crates/net" }
notifications = { path = "crates/notifications" }
open_path_prompt = { path = "crates/open_path_prompt" }
panel = { path = "crates/panel" }
paths = { path = "crates/paths" }
perf = { path = "tooling/perf" }
picker = { path = "crates/picker" }
platform_title_bar = { path = "crates/platform_title_bar" }
project = { path = "crates/project" }
prompt_store = { path = "crates/prompt_store" }
proto = { path = "crates/proto" }
refineable = { path = "crates/refineable" }
release_channel = { path = "crates/release_channel" }
remote = { path = "crates/remote" }
reqwest_client = { path = "crates/reqwest_client" }
rope = { path = "crates/rope" }
rpc = { path = "crates/rpc" }
scheduler = { path = "crates/scheduler" }
search = { path = "crates/search" }
session = { path = "crates/session" }
settings = { path = "crates/settings" }
settings_content = { path = "crates/settings_content" }
settings_json = { path = "crates/settings_json" }
settings_macros = { path = "crates/settings_macros" }
settings_profile_selector = { path = "crates/settings_profile_selector" }
settings_ui = { path = "crates/settings_ui" }
sum_tree = { path = "crates/sum_tree" }
syntax_theme = { path = "crates/syntax_theme" }
tab_switcher = { path = "crates/tab_switcher" }
task = { path = "crates/task" }
text = { path = "crates/text" }
theme = { path = "crates/theme" }
theme_settings = { path = "crates/theme_settings" }
title_bar = { path = "crates/title_bar" }
toolchain_selector = { path = "crates/toolchain_selector" }
ui = { path = "crates/ui" }
ui_input = { path = "crates/ui_input" }
ui_macros = { path = "crates/ui_macros" }
ui_prompt = { path = "crates/ui_prompt" }
util = { path = "crates/util" }
util_macros = { path = "crates/util_macros" }
watch = { path = "crates/watch" }
which_key = { path = "crates/which_key" }
workspace = { path = "crates/workspace" }
worktree = { path = "crates/worktree" }
zed = { path = "crates/zed" }
zed_actions = { path = "crates/zed_actions" }
zed_credentials_provider = { path = "crates/zed_credentials_provider" }
zed_env_vars = { path = "crates/zed_env_vars" }
zlog = { path = "crates/zlog" }
zlog_settings = { path = "crates/zlog_settings" }
ztracing = { path = "crates/ztracing" }
ztracing_macro = { path = "crates/ztracing_macro" }

#
# External crates
#

accesskit = "0.24.0"
accesskit_macos = "0.26.0"
accesskit_unix = "0.21.0"
accesskit_windows = "0.32.1"
aho-corasick = "1.1"
any_vec = "0.14"
anyhow = "1.0.86"
ashpd = { version = "0.13", default-features = false, features = [
    "async-io",
    "notification",
    "open_uri",
    "file_chooser",
    "settings",
    "trash"
] }
async-channel = "2.5.0"
async-compression = { version = "0.4", features = ["bzip2", "gzip", "futures-io"] }
async-fs = "2.1"
async-lock = "3.4.2"
async-pipe = { git = "https://github.com/zed-industries/async-pipe-rs", rev = "82d00a04211cf4e1236029aa03e6b6ce2a74c553" }
async-recursion = "1.0.0"
async-tar = "0.5.1"
async-task = "4.7"
async-trait = "0.1"
async-tungstenite = "0.31.0"
async-process = "2.5.0"
async_zip = { version = "0.0.18", features = ["deflate", "deflate64"] }
backtrace = "0.3"
base64 = "0.22"
bitflags = "2.6.0"
bytes = "1.0"
chardetng = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
clap = { version = "4.4", features = ["derive", "wrap_help"] }
cocoa = "=0.26.0"
cocoa-foundation = "=0.2.0"
const_format = "0.2"
convert_case = "0.11.0"
core-foundation = "=0.10.0"
core-foundation-sys = "0.8.6"
core-video = { version = "0.5.2", features = ["metal"] }
crash-handler = "0.7"
criterion = { version = "0.5", features = ["html_reports"] }
ctor = "1.0.6"
derive_more = { version = "2.1.1", features = [
    "add",
    "add_assign",
    "deref",
    "deref_mut",
    "display",
    "from_str",
    "mul",
    "mul_assign",
    "not",
] }
dirs = "6.0"
documented = "0.9.1"
dotenvy = "0.15.0"
dunce = "1.0"
emojis = "0.6.1"
env_logger = "0.11"
encoding_rs = "0.8"
exec = "0.3.1"
fancy-regex = "0.17.0"
fork = "0.4.0"
futures = "0.3.32"
futures-concurrency = "7.7.1"
futures-lite = "1.13"
globset = "0.4"
heapless = "0.9.2"
heck = "0.5"
hdrhistogram = "7"
hex = "0.4.3"
human_bytes = "0.4.1"
html5ever = "0.27.0"
http = "1.1"
http-body = "1.0"
ignore = "0.4.22"
image = "0.25.1"
imara-diff = "0.1.8"
indexmap = { version = "2.7.0", features = ["serde"] }
indoc = "2"
inventory = "0.3.19"
itertools = "0.14.0"
json_dotpath = "1.1"
libc = "0.2"
linkify = "0.10.0"
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
lsp-types = { path = "crates/lsp-types" }
mach2 = "0.5"
markup5ever_rcdom = "0.3.0"
metal = "0.33"
moka = { version = "0.12.10", features = ["sync"] }
nix = "0.29"
nucleo = "0.5"
objc = "0.2"
objc2-app-kit = { version = "0.3", default-features = false, features = [ "NSGraphics" ] }
objc2-foundation = { version = "=0.3.2", default-features = false, features = [
    "NSArray",
    "NSAttributedString",
    "NSBundle",
    "NSCoder",
    "NSData",
    "NSDate",
    "NSDictionary",
    "NSEnumerator",
    "NSError",
    "NSGeometry",
    "NSNotification",
    "NSNull",
    "NSObjCRuntime",
    "NSObject",
    "NSProcessInfo",
    "NSRange",
    "NSRunLoop",
    "NSString",
    "NSURL",
    "NSUndoManager",
    "NSValue",
    "objc2-core-foundation",
    "std",
] }
ordered-float = "2.1.1"
palette = { version = "0.7.5", default-features = false, features = ["std"] }
parking_lot = "0.12.1"
partial-json-fixer = "0.5.3"
pciid-parser = "0.8.0"
percent-encoding = "2.3.2"
postage = { version = "0.5", features = ["futures-traits"] }
pretty_assertions = { version = "1.3.0", features = ["unstable"] }
proc-macro2 = "1.0.93"
profiling = "1"
# replace this with main when #635 is merged
proptest = { git = "https://github.com/proptest-rs/proptest", rev = "3dca198a8fef1b32e3a66f1e1897c955b4dc5b5b", features = ["attr-macro"] }
proptest-derive = "0.8.0"
prost = "0.9"
prost-build = "0.9"
pollster = "0.4.0"
pulldown-cmark = { version = "0.13.0", default-features = false }
quick-xml = "0.38"
quote = "1.0.9"
rand = "0.9"
rayon = "1.8"
regex = "1.5"
# WARNING: If you change this, you must also publish a new version of zed-reqwest to crates.io
reqwest = { git = "https://github.com/zed-industries/reqwest.git", rev = "c15662463bda39148ba154100dd44d3fba5873a4", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "multipart",
    "rustls-tls-native-roots",
    "socks",
    "stream",
], package = "zed-reqwest", version = "0.12.15-zed" }
rsa = "0.9.6"
rust-embed = { version = "8.11", features = ["include-exclude"] }
rustc-hash = "2.1.0"
rustls = { version = "0.23.26" }
rustls-platform-verifier = "0.5.0"
# WARNING: If you change this, you must also publish a new version of zed-scap to crates.io
scap = { git = "https://github.com/zed-industries/scap", rev = "4afea48c3b002197176fb19cd0f9b180dd36eaac", default-features = false, package = "zed-scap", version = "0.0.8-zed" }
schemars = { version = "1.0", features = ["indexmap2"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0.221", features = ["derive", "rc"] }
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
serde_yaml_ng = "0.10"
serde_json_lenient = { version = "0.2", features = [
    "preserve_order",
    "raw_value",
] }
serde_path_to_error = "0.1.17"
serde_urlencoded = "0.7"
sha2 = "0.10"
shellexpand = "3.1"
shlex = "1.3.0"
simplelog = "0.12.2"
slotmap = "1.0.6"
smallvec = { version = "1.6", features = ["union", "const_new"] }
smol = "2.0"
sqlformat = "0.2"
stacksafe = "0.1"
streaming-iterator = "0.1"
strsim = "0.11"
strum = { version = "0.27.2", features = ["derive"] }
syn = { version = "2.0.101", features = ["full", "extra-traits", "visit-mut"] }
sys-locale = "0.3.1"
sysinfo = "0.37.0"
take-until = "0.2.0"
tempfile = "3.20.0"
thiserror = "2.0.12"
time = { version = "0.3", features = [
    "macros",
    "parsing",
    "serde",
    "serde-well-known",
    "formatting",
    "local-offset",
] }
tiny_http = "0.12"
tokio = { version = "1" }
tokio-socks = { version = "0.5.2", default-features = false, features = [
    "futures-io",
    "tokio",
] }
toml = "0.8"
tower-http = "0.4.4"
tree-sitter = { version = "0.26.9", features = ["wasm"] }
tree-sitter-json = "0.24"    # keep for keymap_editor + settings_json
tree-sitter-rust = "0.24.2"  # keep for keymap_editor
tracing = "0.1.40"
unicase = "2.6"
unicode-script = "0.5.7"
unicode-segmentation = "1.10"
unicode-width = "0.2"
unindent = "0.2.0"
url = "2.2"
urlencoding = "2.1.2"
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }
vte = { version = "0.15.0", features = ["ansi"] }
walkdir = "2.5"
wasm-encoder = "0.221"
wasmparser = "0.221"
wasmtime = { version = "36", default-features = false, features = [
    "async",
    "demangle",
    "runtime",
    "cranelift",
    "component-model",
    "incremental-cache",
    "parallel-compilation",
] }
wasmtime-wasi = "36"
wax = "0.7"
which = "6.0.0"
wasm-bindgen = "0.2.120"
web-time = "1.1.0"
wgpu = { git = "https://github.com/zed-industries/wgpu.git", rev = "357a0c56e0070480ad9daea5d2eaa83150b79e88" }
windows-core = "0.61"
yawc = "0.2.5"
zeroize = "1.8"
zstd = "0.11"

[workspace.dependencies.windows]
version = "0.61"
features = [
    "Foundation_Numerics",
    "Globalization_DateTimeFormatting",
    "Storage_Search",
    "Storage_Streams",
    "System_Threading",
    "UI_ViewManagement",
    "Wdk_System_SystemServices",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_DirectManipulation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Hlsl",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Performance",
    "Win32_System_Pipes",
    "Win32_System_RestartManager",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media",
]

[patch.crates-io]
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }
notify = { git = "https://github.com/zed-industries/notify.git", rev = "6566ae63331ffd1f2025b18dc00c3049fb8588c9" }
notify-types = { git = "https://github.com/zed-industries/notify.git", rev = "6566ae63331ffd1f2025b18dc00c3049fb8588c9" }
windows-capture = { git = "https://github.com/zed-industries/windows-capture.git", rev = "f0d6c1b6691db75461b732f6d5ff56eed002eeb9" }
calloop = { git = "https://github.com/zed-industries/calloop" }

[profile.dev]
split-debuginfo = "unpacked"
incremental = true
codegen-units = 16
debug = "limited"

# mirror configuration for crates compiled for the build platform
# (without this cargo will compile ~400 crates twice)
[profile.dev.build-override]
codegen-units = 16
split-debuginfo = "unpacked"
debug = "limited"

# "debug" is a reserved profile name.
[profile.dbg]
inherits = "dev"
debug = "full"

[profile.dbg.build-override]
debug = "full"

[profile.dev.package]
# proc-macros start
gpui_macros = { opt-level = 3 }
derive_refineable = { opt-level = 3 }
settings_macros = { opt-level = 3 }
ui_macros = { opt-level = 3 }
util_macros = { opt-level = 3 }
quote = { opt-level = 3 }
syn = { opt-level = 3 }
proc-macro2 = { opt-level = 3 }
# proc-macros end

tree-sitter = { opt-level = 3 }
taffy = { opt-level = 3 }
resvg = { opt-level = 3 }
wasmtime = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
wasmtime-environ = { opt-level = 3 }
wasmtime-internal-cranelift = { opt-level = 3 }
# Build single-source-file crates with cg=1 as it helps make `cargo build` of a whole workspace a bit faster
assets = { codegen-units = 1 }
breadcrumbs = { codegen-units = 1 }
collections = { codegen-units = 1 }
command_palette = { codegen-units = 1 }
command_palette_hooks = { codegen-units = 1 }
image_viewer = { codegen-units = 1 }
menu = { codegen-units = 1 }
notifications = { codegen-units = 1 }
paths = { codegen-units = 1 }
refineable = { codegen-units = 1 }
release_channel = { codegen-units = 1 }
reqwest_client = { codegen-units = 1 }
session = { codegen-units = 1 }
ui_input = { codegen-units = 1 }
zed_actions = { codegen-units = 1 }

[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1

[profile.release.package]
zed = { codegen-units = 16 }

[profile.release-fast]
inherits = "release"
debug = "full"
lto = false
codegen-units = 16

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

declare_interior_mutable_const = "deny"

redundant_clone = "deny"
disallowed_methods = "deny"

# We currently do not restrict any style rules
# as it slows down shipping code to Zed.
#
# Running ./script/clippy can take several minutes, and so it's
# common to skip that step and let CI do it. Any unexpected failures
# (which also take minutes to discover) thus require switching back
# to an old branch, manual fixing, and re-pushing.
#
# In the future we could improve this by either making sure
# Zed can surface clippy errors in diagnostics (in addition to the
# rust-analyzer errors), or by having CI fix style nits automatically.
style = { level = "allow", priority = -1 }

# Individual rules that have violations in the codebase:
type_complexity = "allow"
let_underscore_future = "allow"

# Motivation: We use `vec![a..b]` a lot when dealing with ranges in text, so
# warning on this rule produces a lot of noise.
single_range_in_vec_init = "allow"

# in Rust it can be very tedious to reduce argument count without
# running afoul of the borrow checker.
too_many_arguments = "allow"

# We often have large enum variants yet we rarely actually bother with splitting them up.
large_enum_variant = "allow"

# Boolean expressions can be hard to read, requiring only the minimal form gets in the way
nonminimal_bool = "allow"

[workspace.metadata.cargo-machete]
ignored = [
    "bindgen",
    "cbindgen",
    "prost_build",
    "serde",
    "component",
    "documented",
    "sea-orm-macros",
]
