[package]
name = "client"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/client.rs"
doctest = false

[features]
test-support = ["rpc/test-support"]

[dependencies]
anyhow.workspace = true
cloud_api_client.workspace = true
credentials_provider.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
log.workspace = true
parking_lot.workspace = true
postage.workspace = true
rpc = { workspace = true, features = ["gpui"] }
serde.workspace = true
time.workspace = true
url.workspace = true
util.workspace = true
zed_credentials_provider.workspace = true

[dev-dependencies]
fs.workspace = true
gpui = { workspace = true, features = ["test-support"] }
http_client = { workspace = true, features = ["test-support"] }
rpc = { workspace = true, features = ["test-support"] }
settings = { workspace = true, features = ["test-support"] }
util = { workspace = true, features = ["test-support"] }

[target.'cfg(target_os = "windows")'.dependencies]
semver.workspace = true
windows.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation.workspace = true

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tokio-native-tls = "0.3"

[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.dependencies]
rustls-pki-types = "1.12"
tokio-rustls = { version = "0.26", features = ["tls12", "ring"], default-features = false }
