[package]
name = "languages"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[features]
test-support = [
    "load-grammars"
]
load-grammars = [
    "grammars/load-grammars",
    "tree-sitter",
    "tree-sitter-gitcommit",
]

[dependencies]
anyhow.workspace = true
gpui.workspace = true
grammars.workspace = true
language.workspace = true
project.workspace = true
serde.workspace = true
settings.workspace = true
smol.workspace = true
tree-sitter = { workspace = true, optional = true }
tree-sitter-gitcommit = { workspace = true, optional = true }
util.workspace = true

[dev-dependencies]
fs = { workspace = true, features = ["test-support"] }
pretty_assertions.workspace = true
tempfile = { workspace = true}
settings = { workspace = true, features = ["test-support"] }
tree-sitter-bash.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-css.workspace = true
tree-sitter-go.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter.workspace = true
unindent.workspace = true
