[package]
name = "languages"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
language.workspace = true
project.workspace = true
serde.workspace = true
settings.workspace = true
smol.workspace = true
util.workspace = true
