[package]
name = "theme"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[features]
default = []
test-support = ["gpui/test-support", "syntax_theme/test-support"]

[lib]
path = "src/theme.rs"
doctest = false

[dependencies]
anyhow.workspace = true
collections.workspace = true
deunicode.workspace = true
gpui.workspace = true
syntax_theme.workspace = true
palette = { workspace = true, default-features = false, features = ["std"] }
parking_lot.workspace = true
refineable.workspace = true
schemars = { workspace = true, features = ["indexmap2"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
strum.workspace = true
thiserror.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
