[package]
name = "title_bar"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/title_bar.rs"
doctest = false

[features]
default = []

test-support = [
    "client/test-support",

    "gpui/test-support",

    "project/test-support",
    "remote/test-support",
    "util/test-support",
    "workspace/test-support",
]

[dependencies]
platform_title_bar.workspace = true
gpui = { workspace = true, features = ["screen-capture"] }
project.workspace = true
schemars.workspace = true
serde.workspace = true
settings.workspace = true
smallvec.workspace = true
ui.workspace = true
workspace.workspace = true
arrayvec = "0.7.6"

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]
client = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
notifications = { workspace = true, features = ["test-support"] }
project = { workspace = true, features = ["test-support"] }
release_channel.workspace = true
remote = { workspace = true, features = ["test-support"] }
semver.workspace = true
settings = { workspace = true, features = ["test-support"] }
util = { workspace = true, features = ["test-support"] }
workspace = { workspace = true, features = ["test-support"] }
