[package]
name = "workspace"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/workspace.rs"
doctest = false

[features]
test-support = [
    "client/test-support",
    "http_client/test-support",
    "project/test-support",
    "remote/test-support",
    "session/test-support",
    "settings/test-support",
    "gpui/test-support",
    "fs/test-support",
]

[dependencies]
any_vec.workspace = true
anyhow.workspace = true
client.workspace = true
collections.workspace = true
dirs.workspace = true
futures-lite.workspace = true
fs.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
itertools.workspace = true
language.workspace = true
log.workspace = true
menu.workspace = true
markdown.workspace = true
parking_lot.workspace = true
project.workspace = true
remote.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
session.workspace = true
settings.workspace = true
smallvec.workspace = true
task.workspace = true
theme.workspace = true
theme_settings.workspace = true
ui.workspace = true
util.workspace = true
uuid.workspace = true
zed_actions.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

[dev-dependencies]
client = { workspace = true, features = ["test-support"] }
fs = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
project = { workspace = true, features = ["test-support"] }
remote = { workspace = true, features = ["test-support"] }
session = { workspace = true, features = ["test-support"] }
settings = { workspace = true, features = ["test-support"] }
http_client = { workspace = true, features = ["test-support"] }
pretty_assertions.workspace = true
proptest.workspace = true
proptest-derive.workspace = true
tempfile.workspace = true
zlog.workspace = true
