[package]
description = "The fast, collaborative code editor."
edition.workspace = true
name = "zed"
version = "1.6.3"
publish.workspace = true
license = "GPL-3.0-or-later"
authors = ["Zed Team <hi@zed.dev>"]
default-run = "zed"

[lints]
workspace = true

[features]
# LEAK_BACKTRACE=1 cargo run --features zed/track-project-leak --profile release-fast
track-project-leak = ["gpui/leak-detection"]
test-support = [
    "gpui/test-support",
    "gpui_platform/screen-capture",
    "dep:image",
    "workspace/test-support",
    "project/test-support",
    "editor/test-support",
    "image_viewer/test-support",
    "title_bar/test-support",
]
visual-tests = [
    "gpui/test-support",
    "gpui_platform/screen-capture",
    "gpui_platform/test-support",
    "dep:image",
    "dep:tempfile",
    "workspace/test-support",
    "project/test-support",
    "editor/test-support",
    "image_viewer/test-support",
    "clock/test-support",
    "language_model/test-support",
    "fs/test-support",
    "title_bar/test-support",
]

[[bin]]
name = "zed"
path = "src/main.rs"

[[bin]]
name = "zed_visual_test_runner"
path = "src/visual_test_runner.rs"
required-features = ["visual-tests"]

[dependencies]
anyhow.workspace = true
askpass.workspace = true
assets.workspace = true
breadcrumbs.workspace = true
chrono.workspace = true
clap.workspace = true
cli.workspace = true
client.workspace = true
clock = { workspace = true, optional = true }
collections.workspace = true
command_palette.workspace = true
component.workspace = true
editor.workspace = true
encoding_selector.workspace = true
env_logger.workspace = true
fs.workspace = true
futures.workspace = true
git.workspace = true
git_hosting_providers.workspace = true
go_to_line.workspace = true
gpui = { workspace = true, features = ["input-latency-histogram"] }
gpui_platform = {workspace = true, features=["screen-capture", "font-kit", "wayland", "x11"]}
gpui_tokio.workspace = true
hdrhistogram.workspace = true
http_client.workspace = true
image = { workspace = true, optional = true }
image_viewer.workspace = true
inspector_ui.workspace = true
itertools.workspace = true
keymap_editor.workspace = true
language.workspace = true
language_model.workspace = true
language_selector.workspace = true
language_tools.workspace = true
languages.workspace = true
line_ending_selector.workspace = true
log.workspace = true
markdown.workspace = true
menu.workspace = true
mimalloc = { version = "0.1", optional = true }
notifications.workspace = true
open_path_prompt.workspace = true
parking_lot.workspace = true
paths.workspace = true
profiling.workspace = true
project.workspace = true
rayon.workspace = true
release_channel.workspace = true
remote.workspace = true
reqwest_client.workspace = true
rope.workspace = true
search.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
session.workspace = true
settings.workspace = true
settings_profile_selector.workspace = true
settings_ui.workspace = true
strum.workspace = true
sysinfo.workspace = true
tab_switcher.workspace = true
task.workspace = true
tempfile = { workspace = true, optional = true }
theme.workspace = true
theme_settings.workspace = true
time.workspace = true
title_bar.workspace = true
toolchain_selector.workspace = true
ui.workspace = true
ui_prompt.workspace = true
url.workspace = true
urlencoding.workspace = true
util.workspace = true
uuid.workspace = true
which_key.workspace = true
workspace.workspace = true
zed_actions.workspace = true
zed_env_vars.workspace = true
zlog.workspace = true
zlog_settings.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true
gpui = { workspace = true, features = [
    "input-latency-histogram",
    "windows-manifest",
] }

[build-dependencies]
windows_resources = { path = "../windows_resources" }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
gpui = { workspace = true, features = [
    "input-latency-histogram",
    "wayland",
    "x11",
] }
ashpd.workspace = true
image.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.build-dependencies]
image.workspace = true


[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3.22"

[dev-dependencies]
editor = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["input-latency-histogram", "test-support"] }
image_viewer = { workspace = true, features = ["test-support"] }
itertools.workspace = true
language = { workspace = true, features = ["test-support"] }
pretty_assertions.workspace = true
project = { workspace = true, features = ["test-support"] }
semver.workspace = true
title_bar = { workspace = true, features = ["test-support"] }
workspace = { workspace = true, features = ["test-support"] }
image.workspace = true
search = { workspace = true, features = ["test-support"] }

[package.metadata.bundle-dev]
icon = ["resources/app-icon-dev@2x.png", "resources/app-icon-dev.png"]
identifier = "dev.zed.Zed-Dev"
name = "Zed Dev"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = ["resources/info/*"]
osx_url_schemes = ["zed"]

[package.metadata.bundle-nightly]
icon = ["resources/app-icon-nightly@2x.png", "resources/app-icon-nightly.png"]
identifier = "dev.zed.Zed-Nightly"
name = "Zed Nightly"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = ["resources/info/*"]
osx_url_schemes = ["zed"]

[package.metadata.bundle-preview]
icon = ["resources/app-icon-preview@2x.png", "resources/app-icon-preview.png"]
identifier = "dev.zed.Zed-Preview"
name = "Zed Preview"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = ["resources/info/*"]
osx_url_schemes = ["zed"]

[package.metadata.bundle-stable]
icon = ["resources/app-icon@2x.png", "resources/app-icon.png"]
identifier = "dev.zed.Zed"
name = "Zed"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = ["resources/info/*"]
osx_url_schemes = ["zed"]

[package.metadata.cargo-machete]
ignored = ["profiling", "zstd"]
